# quill

./: .gitignore  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: DEVELOPMENT.md
src/: diff.js  diff.test.js  editor.css  editor.html  editor.js  index.html  main.js  settings.js  shortcut.js  shortcut.test.js  styles.css  window_chrome.test.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accessibility.rs  corrector.rs  debug_log.rs  fallback.rs  inserter.rs  lib.rs  logger.rs  mac_focus.rs  mac_window.rs  private.rs  secrets.rs  selection.rs  tcc_reset.rs
