[package]
name = "quill"
version = "0.1.31"
description = "Polish your writing in place — fix grammar in any app via a hotkey"
authors = ["Oleg Peregudov"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name unique from the bin name (a Windows
# linker quirk — see https://github.com/rust-lang/cargo/issues/8519).
name = "quill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# image-png: the green-badge tray icon is a PNG loaded at runtime.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
# Synthetic keyboard input: send ⌘C to copy the selection, and type the
# corrected text back over it. No clipboard paste — see inserter.rs.
enigo = "0.2"
# Read the selection out of the clipboard during capture (then restore it).
arboard = "3"
chrono = "0.4"
dirs = "6"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["time"] }

[target.'cfg(target_os = "macos")'.dependencies]
# Round the borderless NSWindow corners — Tauri doesn't expose this directly,
# and without it the transparent window leaves gaps at the corners on macOS.
cocoa = "0.26"
objc = "0.2"
# Ask macOS whether we're trusted for Accessibility (synthetic keystrokes) and
# pop the system grant dialog when we aren't — see accessibility.rs.
core-foundation = "0.10"
# Post ⌘C as a raw key event with the Command flag set directly on it — the
# reliable way to copy the selection (enigo's separate-modifier chord left the
# flag off and copied nothing). See selection.rs.
core-graphics = "0.24"
